--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,33 @@ Currently we have more than 290 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Bruno Kleinert, name1.name2 at informatik.uni minus erlangen.de
+<br><b>Date:</b> Sat, 22 Aug 2015 17:05:47 +0200
+<pre>
+How many hosts have you installed using fai? <b>2 at the moment.</b> It varies depending on the number of employees and students.
+Which version of fai are you using? <b>4.3.1</b>
+Which version are you using as your install kernel? Plain Debian kernel
+
+Which types of hosts are you installing with fai? Desktops
+
+How do you boot your hosts? Via network (BIOS and UEFI PXE, DHCP)
+Does the default install kernel recognize all your hardware? Yes
+Do you manage your configuration space under version control? Yes, we are using git.
+How big is your config space (Mbytes, # of files)? 620Kb, 82 files.
+How many files do you have in ../config/files? 37
+
+What types of scripts are you using for local customization? At the moment, only shell scripts.
+
+<b>What is the business of your company/organisation?</b> Universität Erlangen-Nürnberg, <a href="http://www3.informatik.uni-erlangen.de/">Informatik 3 (Rechnerarchitektur)</a>
+<br><b>Additional comments:</b>
+Thanks to FAI we could replace a historically grown pile of 25 year
+old shell scripts, perl and whatsoever programs that have become
+unmaintainable long time ago. Also, FAI saves us a lot of time to
+install new machines and we have a centralized configuration
+management for our computers.
+</pre> <HR>
+
+
 <b>From:</b> Luke from brandwatch
 <br><b>Date:</b>  Wed, 22 Apr 2015 11:03:31 +0100
 <pre>
