--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[22 Aug 2015] <b>
+Thomas gave a talk about FAI at the <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">Debian
+		Conference in Heidelberg</a></b></li>
 <li>[30 Apr 2015] <b>
 Thomas gave a talk about FAI at the <a
 href="http://koeln.ccc.de/updates/2015-04-30_OC_FAI.xml">Chaos Computer Club Cologne (C4)</a></b></li>
