--- a/talks/index.html
+++ b/talks/index.html
@@ -104,6 +104,8 @@ linux.conf.au Systems Administration Miniconf</a> 2015
 Chemnitzer Linuxtag</a> 2015
 <a href="../doc/chemnitz-2015.pdf">(Slides)</a>
 <li> A talk a Chaos Computer Club Cologne (C4) (2015)
+<li> A <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">talk</a> at the Debian Conference (DebConf 15) in Heidelberg <a href="../doc/338-FAI--The-Universal-Installation-Tool.pdf">slides</a> and
+<a href="http://meetings-archive.debian.net/pub/debian-meetings/2015/debconf15/FAI_the_universal_deployment_tool.webm">video</a>
 </ul>
 
 <!--
@@ -125,7 +127,7 @@ and at
 <p>
 
 <ADDRESS>
-Fri, 19 Jun 2015 10:50:35 +0200
+Thu, 10 Sep 2015 00:13:15 +0200
 </ADDRESS>
 
  
