update PPA info

--- a/download/index.html
+++ b/download/index.html
@@ -65,20 +65,21 @@ from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
 
 <h1>Packages for Ubuntu</h1>
 
-Have a look at <a href="https://launchpad.net/~fai/+archive/ppa">PPA</a> or the
+<a href="https://launchpad.net/~fai/+archive/ppa">PPA</a> containing
+FAI 4.3.
 
+<!--
+ or the
 <a href="https://launchpad.net/~fai/+archive/testing/">testing PPA</a>
 and 
 <a href="https://launchpad.net/ubuntu/+source/fai">list</a> of FAI packages in Ubuntu releases.
-<p>
-<div class="featurebox"><h3>
-<pre>deb http://ppa.launchpad.net/fai/ubuntu precise main</pre>
-</h3></div>
+-->
 
-FAI 3.4.x packages are included in Ubuntu precise.
 <p>
 <div class="featurebox"><h3>
-<pre>deb http://archive.ubuntu.com/ubuntu precise universe</pre>
+<pre>
+deb http://ppa.launchpad.net/fai/ppa/ubuntu utopic main
+</pre>
 </h3></div>
 
 <p>
