--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -36,13 +36,14 @@ contact before you start working.
 <br>
 <br>
 <br>
-<h1>Topics for FAI 4.X</h1>
+<h1>Topics for FAI 5.X</h1>
 <ul>
 <li> --- DONE ---
 <li> btrfs support for setup-storage
-<li> replace live-boot with dracut in fai-cd (in FAI 4.4~betaXX)
+<li> replace live-boot with dracut in fai-cd (done)
+<li> support for cloning machines with file system images (done)
+<li> update FAI guide (nearly done)
 <li> --- TODO ---
-<li> update FAI guide (in progress)
 <li> relax and recover
 <li> --- TODO's for the next versions ---
 <li>  new command for building cloud images with FAI
@@ -59,7 +60,7 @@ classes, date of last fai action
 
 <HR>
 <ADDRESS>
-Thu, 11 Jun 2015 19:41:31 +0200
+Thu, 15 Oct 2015 16:28:24 +0200
 </ADDRESS>
 
       </div>
