add info for DebianLAN

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -37,7 +37,9 @@ inside FAI
 <li> <a href="https://wiki.debian.org/DebianLAN">Debian Local Area
 Network</a> is a project, that provides a FAI configuration for
 setting up a local network with centralized user and machine
-management.
+management. It uses a server with Kerberos and LDAP and provides NFS
+for user home directories including a FAI-server to install
+clients. Also diskless clients are supported.
 
  <li> A <a href="http://wiki.fai-project.org/wiki/FAI_Installation_Overview
 ">visual overview</a> of how all the pieces of an FAI installation fit together. 
