add disk cloning

--- a/features/index.html
+++ b/features/index.html
@@ -44,6 +44,7 @@ only of shell, Perl and Cfengine scripts.
 <li> Easy creation of customized unattended ISO
 <li> Besides initial installations, it is used for daily maintenance,
 and can set up chroot environments.
+<li> Cloning machines using disk images is supported
 <li> Compared to tools like kickstart or cobbler for Red Hat, autoyast for SUSE or
 Jumpstart for SUN Solaris, FAI is much more flexible. You can tune every
 small part of your configuration to your local needs using hooks.
