remove some infos

--- a/contact/index.html
+++ b/contact/index.html
@@ -45,11 +45,9 @@ for feedback, suggestions and comments
 
 <p> &nbsp; </p><p> &nbsp; </p>
 
-<h2>Commercial support</h2>
+<h2>Professional support</h2>
 <ul>
-<li> Do you want to install a beowulf cluster and need support for planing the installation ?
-<li>  Do you want to hear a talk about FAI ?
-<li> Worldwide <b>commercial</b> support for FAI is available from the
+<li> Worldwide commercial support for FAI is available from the
 author himself. Have a look at <a href="http://fai-cluster.de">fai-cluster.de</a>. Send
 an <a href="mailto:infoXXnospam@fai-cluster.de">email</a>.
 <li> The author also gives <a href="http://www.linuxhotel.de/kurs/fai/">tutorials
