--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -41,16 +41,31 @@ and <a href="http://www.youtube.com/watch?v=nW5MS3_pzyY">Video 2</a>
 The FAI monitor daemon (fai-monitor) receives small messages from each install
 client (<a href="/logs/fai-monitor.log">sample log file of fai-monitor</a>), which describes
 what each client is doing at the moment. The GUI creates a nice table
-and is showing all actions in real time for all clients. (Click on
-screenshot for animated gif)
+and is showing all actions in real time for all clients.
 <p> &nbsp;<p> 
 
 <a href="fai-monitor.gif"><img alt="An example of the fai-monitor-gui"
-                  src="faimond.png" border="0"/></a>
-
+                  src="faimond.png" width="450" border="0"/></a>
+ (Click on screenshot for animated gif)
 <p>
 
-<h2>A slideshow of an installation via CD</h2>
+<h2>The new autodiscover function of FAI 5.0</h2>
+<p>
+<img alt="xxxx" src="fai1.png" width="600" />
+<p>
+<img alt="xxxx" src="fai2.png" width="600" />
+<p>
+<img alt="xxxx" src="fai3.png" width="600" />
+<p>
+<img alt="xxxx" src="fai4.png" width="600" />
+<p>
+<img alt="xxxx" src="fai5.png" width="600" />
+<p>
+<img alt="xxxx" src="fai10.png" width="600" />
+ </a>
+
+
+<h2>A slideshow of an installation via CD (old)</h2>
 <p>
 <a href="/slideshow/"><img alt="slideshow overview" src="slideshow-overview.png" border="0"/>
  </a>
