add link to logs

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -31,6 +31,7 @@
 
 <li> <a href="http://wiki.fai-project.org/wiki/Variables">List</a>  of important variables
 inside FAI
+<li> <a href="/logs"> Log files</a> of successfully installed computers
 
 <li> <a href="/talks/">Talks</a>  of Thomas, the main author
 
