--- a/features/index.html
+++ b/features/index.html
@@ -42,6 +42,7 @@ among several machines.
 is needed. It's architecture independent, since it consists
 only of shell, Perl and Cfengine scripts.
 <li> Easy creation of customized unattended ISO
+<li> Autodiscover the FAI install server
 <li> Besides initial installations, it is used for daily maintenance,
 and can set up chroot environments.
 <li> Cloning machines using disk images is supported
