add link to talks

--- a/guide/index.html
+++ b/guide/index.html
@@ -75,6 +75,7 @@ Search the man pages:
 
 <p> &nbsp <p>
 
+<h1> <a href="/talks">Talks about FAI</a></h1>
       </div>
     </div>
   <div id="footer"></div>
