--- a/features/index.html
+++ b/features/index.html
@@ -41,7 +41,7 @@ among several machines.
 <li> FAI is lightweight. No special daemons are running, no database setup
 is needed. It's architecture independent, since it consists
 only of shell, Perl and Cfengine scripts.
-<li> Easy creation of customized unattended ISO
+<li> Easy creation of customized Linux installation CD/DVD
 <li> Autodiscover the FAI install server
 <li> Besides initial installations, it is used for daily maintenance,
 and can set up chroot environments.
@@ -60,15 +60,15 @@ small part of your configuration to your local needs using hooks.
 <li> Receive configuration data via HTTP, NFS, svn or git
 <li> Run scripts to determine FAI classes and variables
 <li> Partition local hard disks and create RAID, LVM configuration and the file systems
-<li> Install and configure software packages 
+<li> Install and configure software packages
 <li> Customize OS and software to your local needs
 <li> Reboot freshly installed machine
 <li> All this can also be done via an unattended CD installation
 </ul>
 
 <h1>FAI History</h1>
-FAI is rock-solid. It's now more than ten years old. FAI was started in 1999 at
-the University of Cologne (<a href=http://www.uni-koeln.de>Universit&auml;t zu K&ouml;ln</a>), when
+FAI is rock-solid. It's now more than 15 years old. FAI was started in 1999 at
+the University of Cologne, when
 <a href="http://www.informatik.uni-koeln.de/~lange">Thomas</a> had to
 organize an installation of a Linux cluster with one server and 16
 clients. Today, FAI is regularly used in <a href="/reports/">varying environments</a>,
