--- a/talks/index.html
+++ b/talks/index.html
@@ -75,7 +75,7 @@ in Frankfurt 2005</a>: A GUI for FAI was presented.
 
 <li> <a href="http://www.linuxpodcast.de/index.php?id=77">Interview (audio)</a> with Thomas. (11/2006, made at the Linux world expo in cologne).
 <li> A talk at LinuxTag 2007.
-<li> I gave a talk and demonstration at FrOSCon 2007 (<a href="../videos/ThomasLange-DeploymentVonGrossenLinuxInstallationen.mp4">video</a>).
+<li> I gave a talk and demonstration at FrOSCon 2007 (<a href="../videos/ThomasLange-DeploymentVonGrossenLinuxInstallationen.mp4">video in german</a>).
 <li> Talk at the OpenExpo 2007 in Z&uuml;rich. <a href="../doc/openexpo-07.pdf">Slides</a> and the <a href="../doc/openexpo-07.mp3">audio file</a>.
 
 <li> A talk at the <a href="http://www.heinlein-support.de/web/akademie/slac-2007/slac07-konferenz/">2. Secure Linux Administration Conference (SLAC)</a>
@@ -95,13 +95,12 @@ Source Meets Business</a>, 22.-24. Januar  2008  in Nuernberg, <a href="../doc/o
 
 <li> A short talk at the <a href="http://sysadmin.miniconf.org/programme15.html">
 linux.conf.au Systems Administration Miniconf</a> 2015
-<a href="../doc/lca2015-thomas_lange-fai.pdf">(Slides)</a>
-<a href="../videos/FAI_the_universal_deployment_tool.webm">(Video)</a>
+<a href="../doc/lca2015-thomas_lange-fai.pdf">Slides</a>, 
+<a href="../videos/FAI_the_universal_deployment_tool.webm">Video</a>, 
+<a href="https://www.youtube.com/watch?v=_oAmsN_8NRQ">Youtube</a>
 
 
-
-<li> A short talk at the <a href="https://chemnitzer.linux-tage.de/2015/">
-Chemnitzer Linuxtag</a> 2015
+<li> A short <a href="https://chemnitzer.linux-tage.de/2015/de/programm/beitrag/239">talk (audio in german)</a> at the Chemnitzer Linuxtag 2015
 <a href="../doc/chemnitz-2015.pdf">(Slides)</a>
 <li> A talk a Chaos Computer Club Cologne (C4) (2015)
 <li> A <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">talk</a> at the Debian Conference (DebConf 15) in Heidelberg <a href="../doc/338-FAI--The-Universal-Installation-Tool.pdf">slides</a> and
@@ -127,7 +126,7 @@ and at
 <p>
 
 <ADDRESS>
-Thu, 10 Sep 2015 00:13:15 +0200
+Sun, 22 Nov 2015 16:30:39 +0100
 </ADDRESS>
 
  
