new video links

--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -29,10 +29,14 @@
 <h2>Videos</h2>
 
 <ul>
-<li> <a href="fai-cd.avi">Video</a> (3:30min, 3.5MB) of a <a href="/fai-cd">FAI CD</a> installation.
-<a href="fai-cd-win.avi">Video for Windows users</a>
-<li> Ubuntu Oneiric (11.10) installation <a href="http://www.youtube.com/watch?v=yLIZL_iyAww">Video 1</a>
-and <a href="http://www.youtube.com/watch?v=nW5MS3_pzyY">Video 2</a>
+<li> <a href="https://youtu.be/btbqz_hVfpo"> Video in german about FAI 5.0</a>
+ (<a href="fai-5.0.avi">download 105MB)</a>. Four different machines
+ are installed simultaneously.
+<li> Ubuntu Oneiric (11.10) installation <a href="http://www.youtube.com/watch?v=yLIZL_iyAww">Video 1</a>, 
+<a href="http://www.youtube.com/watch?v=nW5MS3_pzyY">Video 2</a>, 
+<a href="https://www.youtube.com/watch?v=1Vw9NJ9KVfE">Video 3</a>
+
+<li> <a href="../talks">Videos of talks about FAI</a>
 </ul>
 
 <p>
