--- a/features/index.html
+++ b/features/index.html
@@ -41,7 +41,7 @@ among several machines.
 <li> FAI is lightweight. No special daemons are running, no database setup
 is needed. It's architecture independent, since it consists
 only of shell, Perl and Cfengine scripts.
-<li> Easy creation of customized Linux installation CD/DVD
+<li> Easy creation of customized Linux installation CD, DVD or USB stick
 <li> Autodiscover of the FAI install server
 <li> Besides initial installations, it is used for daily maintenance,
 and can set up chroot environments.
