--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -40,9 +40,9 @@ contact before you start working.
 <ul>
 <li> --- DONE ---
 <li> btrfs support for setup-storage
-<li> replace live-boot with dracut in fai-cd (done)
-<li> support for cloning machines with file system images (done)
-<li> update FAI guide (nearly done)
+<li> replace live-boot with dracut in fai-cd
+<li> support for cloning machines with file system images
+<li> update FAI guide
 <li> --- TODO ---
 <li> relax and recover
 <li> --- TODO's for the next versions ---
@@ -55,12 +55,10 @@ classes, date of last fai action
 <li> --- LONG TERM ---
 <li> zfs support?
 </ul>
-
 <br>
-
 <HR>
 <ADDRESS>
-Thu, 15 Oct 2015 16:28:24 +0200
+Sun, 22 Nov 2015 23:49:35 +0100
 </ADDRESS>
 
       </div>
