--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[Nov 2015] <b>FAI 5.0 will be released soon</b>
 <li>[22 Aug 2015] <b>
 Thomas gave a talk about FAI at the <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">Debian
 		Conference in Heidelberg</a></b></li>
-<li>[26 May 2015] <b>FAI 4.3.3 released</b></li>
-<li>[24 Oct 2014] <b>FAI 4.3 released, btrfs support added</b></li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
