add image for Kerim

--- a/team/index.html
+++ b/team/index.html
@@ -44,7 +44,7 @@
 </tr>
 
 <tr>
-     <td style="float: left; margin: 5em 1em 5em 1em;">-</td>
+     <td><img src="/team/kerim.jpg" width="130" style="float: left; margin: 1em 1em 1em 1em;" alt="" />
      <td><strong>Kerim Gueney</strong><br/> kerim (a t) fai-project.org<br />gueney or kerim on #fai
 <br />developer and setup-storage expert</td>
 </tr>
@@ -58,7 +58,7 @@
 
 <hr>
 <address>
-Sun, 31 Aug 2014 22:10:00 +0200
+Mon, 23 Nov 2015 16:17:00 +0100
 </address>
 
       </div>
