--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -29,6 +29,10 @@
 <h2>Videos</h2>
 
 <ul>
+<li> <a href="https://youtu.be/POOuZdWmnqA"> Video in german about FAI
+ 5.0 server installation</a>
+ (<a href="faiserver-install.avi">download 17MB)</a>. A FAI server is installed
+ fully automatically from CD.
 <li> <a href="https://youtu.be/btbqz_hVfpo"> Video in german about FAI 5.0</a>
  (<a href="fai-5.0.avi">download 105MB)</a>. Four different machines
  are installed simultaneously.
