--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 		<li><a href="/cluster/">Clusters built with FAI</a></li>
 	      </ul>
 	  </li>
-	    <li><a href="/screenshots/" title="Screenshots">Video / Screenshots</a></li>
+	    <li><a href="/screenshots/" title="Screenshots">Videos / Screenshots</a></li>
 
 	    <li class="active">
 	      <a href="/fai-cd/" title="Download">Download</a>
