--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -59,21 +59,21 @@ and is showing all actions in real time for all clients.
 
 <h2>The new autodiscover function of FAI 5.0</h2>
 <p>
-<img alt="xxxx" src="fai1.png" width="600" />
+<img alt="FAI autodiscover" src="fai1.png" width="600" />
 <p>
-<img alt="xxxx" src="fai2.png" width="600" />
+<img alt="FAI autodiscover" src="fai2.png" width="600" />
 <p>
-<img alt="xxxx" src="fai3.png" width="600" />
+<img alt="FAI autodiscover" src="fai3.png" width="600" />
 <p>
-<img alt="xxxx" src="fai4.png" width="600" />
+<img alt="FAI autodiscover" src="fai4.png" width="600" />
 <p>
-<img alt="xxxx" src="fai5.png" width="600" />
+<img alt="FAI autodiscover" src="fai5.png" width="600" />
 <p>
-<img alt="xxxx" src="fai10.png" width="600" />
+<img alt="FAI autodiscover" src="fai10.png" width="600" />
  </a>
 
 
-<h2>A slideshow of an installation via CD (old)</h2>
+<h2>A slideshow of an installation via CD</h2>
 <p>
 <a href="/slideshow/"><img alt="slideshow overview" src="slideshow-overview.png" border="0"/>
  </a>
