fai-guide uses flask theme

--- a/guide/index.html
+++ b/guide/index.html
@@ -31,8 +31,7 @@
 <li> FAI Guide <a href="/fai-guide.text">ASCII</a>, <a
 href="/fai-guide.pdf">PDF</a>, <a
 href="/fai-guide.ps.gz">Postscript</a>, <a
-href="/fai-guide/">HTML</a>, <a
-href="/fai-guide.html">HTML (one file)</a>
+href="/fai-guide/">HTML</a>
 </li>
 <li>
 <a id=search></a>
