--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-4.3.2+wheezy1.iso" style="text-decoration: none">
-<span class="downloadbox-real" >Download FAI CD</span>
+<a href="/fai-cd/faicd64-large_5.0.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (940 MB)</span>
 </a>
 </span>
 </p>
@@ -55,7 +55,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[Nov 2015] <b>FAI 5.0 will be released soon</b>
+<li>[24 Nov 2015] <b>FAI 5.0 is released</b>
 <li>[22 Aug 2015] <b>
 Thomas gave a talk about FAI at the <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">Debian
 		Conference in Heidelberg</a></b></li>
