--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -54,7 +54,7 @@ for CentOS 7 and Ubuntu 14.04
 &nbsp;
 &nbsp;
 &nbsp;
-Fits onto a CD. Only the XFCE packages are included. Other packages and
+Only the XFCE packages are included. Other packages and
 basefiles are downloaded from the internet.
 <p>
 <p> &nbsp;
