--- a/download/index.html
+++ b/download/index.html
@@ -88,9 +88,7 @@ deb http://ppa.launchpad.net/fai/ppa/ubuntu utopic main
 
 <h1>Base files for CentOS and Scientific Linux Cern</h1>
 <ul>
-<li> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-September/009243.html">Announcement and HowTo</a>
-for installing CentOS and SLC using FAI.
-<li> When installing CentOS or SLC using FAI you need different <a href="basefiles">base files</a>.
+<li> When installing Ubuntu, CentOS or SLC using FAI you need different <a href="basefiles">base files</a>.
 
 </ul>
 
