--- a/guide/index.html
+++ b/guide/index.html
@@ -50,7 +50,7 @@ Search in the FAI guide:
 
 <h1>The manual pages</h1>
 <ul>
-<li> <a href="../doc/man/">all man pages
+<li> <a href="../doc/man/">All man pages
 <li>
 <a id=search></a>
 Search the man pages:
