--- a/features/index.html
+++ b/features/index.html
@@ -32,6 +32,8 @@
 <li> It's fast. It only takes a few minutes for a complete installation.
 <li> Scalable. FAI users manage their computer infrastructures starting
  from a few computers up to several thousands of machines.
+<li> Easy creation of customized Linux installation media like CD, DVD or USB stick
+<li> Autodiscover of the FAI install server when doing a network installation
 <li> Different hardware and different configuration requirements are easy to
 establish using FAI. You do not need to repeat information that is shared
 among several machines.
@@ -41,8 +43,6 @@ among several machines.
 <li> FAI is lightweight. No special daemons are running, no database setup
 is needed. It's architecture independent, since it consists
 only of shell, Perl and Cfengine scripts.
-<li> Easy creation of customized Linux installation CD, DVD or USB stick
-<li> Autodiscover of the FAI install server
 <li> Besides initial installations, it is used for daily maintenance,
 and can set up chroot environments.
 <li> Cloning machines using disk images is supported
