--- a/download/index.html
+++ b/download/index.html
@@ -66,7 +66,7 @@ from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
 <h1>Packages for Ubuntu</h1>
 
 <a href="https://launchpad.net/~fai/+archive/ppa">PPA</a> containing
-FAI 4.3.
+FAI 5.0 and older versions.
 
 <!--
  or the
@@ -78,7 +78,7 @@ and
 <p>
 <div class="featurebox"><h3>
 <pre>
-deb http://ppa.launchpad.net/fai/ppa/ubuntu utopic main
+deb http://ppa.launchpad.net/fai/ppa/ubuntu wily main
 </pre>
 </h3></div>
 
@@ -86,10 +86,9 @@ deb http://ppa.launchpad.net/fai/ppa/ubuntu utopic main
 
 
 
-<h1>Base files for CentOS and Scientific Linux Cern</h1>
+<h1>Base files for Ubuntu, CentOS and Scientific Linux Cern</h1>
 <ul>
-<li> When installing Ubuntu, CentOS or SLC using FAI you need different <a href="basefiles">base files</a>.
-
+<li> <a href="basefiles">Base files</a> are needed for Ubuntu, CentOS or SLC if your nfsroot is a Debian one.
 </ul>
 
       </div>
