--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,28 @@ Currently we have more than 290 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Neelesh Gurjar,  neel dot last name gmail com
+<br><b>Date:</b>  Thu, 26 Nov 2015 21:36:19 +0530
+<pre>
+How many hosts have you installed using fai? <b>5 hosts and more than 40 VMs</b>
+Which version of fai are you using? <b>4.2</b>
+Which version are you using as your install kernel? plain Debian kernel (3.16)​ from Debian 7
+
+Which types of hosts are you installing with fai? ​Proxmox ​on top of Debian for Cloud Provisioning, Web Sever 
+
+How do you boot your hosts? Network PXE​
+Does the default install kernel recognize all your hardware? Till now no issue I faced with hardware detection. However I have not much used fai ISO directly.
+​Which drivers are missing? None
+
+Do you manage your configuration space under version control? No​
+What types of scripts are you using for local customization? Shell​
+
+<b>What is the business of your company/organisation?</b> Linux Server consultant. My <a href="http://neeleshgurjar.co.in ">technical blog</a>
+<br><b>Additional comments:</b>
+I liked FAI project mainly because of support by IRC or email.​ Which is really nice. Good work ! keep it up!!
+</pre> <HR>
+
+
 <b>From:</b> Ricardo Branco Pinto
 <br><b>Date:</b> Tue, 24 Nov 2015 17:00:37 +0000
 
@@ -50,13 +72,13 @@ Which types of hosts are you installing with fai? Desktops, virtual machines and
 How do you boot your hosts? FAI-CD for production, PXE for testing.
 Does the default install kernel recognize all your hardware? Yes.
 Which drivers are missing? Currently none.
-Do you manage your configuration space under version control? Yes.
+Do you manage your configuration space under version control? Yes, git.
 
 How big is your config space (Mbytes, # of files)?  158M. 267 files.
 How many files do you have in ../config/files? 118.
 What types of scripts are you using for local customization? Shell, Perl, Python, Expect.
 
-<b>What is the business of your company/organisation?</b> n/a
+<b>What is the business of your company/organisation?</b> Electronic voting systems
 <br><b>Additional comments:</b>
 We use FAI to automate the installation.
 
