--- a/reports/index.html
+++ b/reports/index.html
@@ -32,21 +32,47 @@ Currently we have more than 290 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Wolfgang Hotwagner, www.toscom.at
+<br><b>Date:</b> Thu, 10 Dec 2015 17:50:36 +0100
+
+<pre>
+How many hosts have you installed using fai? <b>150+</b>
+Which version of fai are you using? <b>5.0</b>
+
+Which types of hosts are you installing with fai? firewalls, cluster nodes, web server, mail server, monitoring server
+
+Which version are you using as your install kernel? plain Debian kernel
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? Nothing. Its perfect
+
+Do you manage your configuration space under version control? yes, git
+How big is your config space (Mbytes, # of files)? 960K / 84 files
+How many files do you have in ../config/files? 25
+What types of scripts are you using for local customization? shell, puppet
+
+<b>What is the business of your company/organisation?</b> Open source company, <a href="http://www.toscom.at/">Toscom</a>
+<br><b>Additional comments:</b>
+We are deploying all kind of linux-servers using fai for many years
+</pre> <HR>
+
+
 <b>From:</b> Neelesh Gurjar,  neel dot last name gmail com
 <br><b>Date:</b>  Thu, 26 Nov 2015 21:36:19 +0530
 <pre>
 How many hosts have you installed using fai? <b>5 hosts and more than 40 VMs</b>
 Which version of fai are you using? <b>4.2</b>
-Which version are you using as your install kernel? plain Debian kernel (3.16)​ from Debian 7
 
-Which types of hosts are you installing with fai? ​Proxmox ​on top of Debian for Cloud Provisioning, Web Sever 
+Which types of hosts are you installing with fai? Proxmox on top of Debian for Cloud Provisioning, Web Sever
 
-How do you boot your hosts? Network PXE​
-Does the default install kernel recognize all your hardware? Till now no issue I faced with hardware detection. However I have not much used fai ISO directly.
-​Which drivers are missing? None
+Which version are you using as your install kernel? plain Debian kernel (3.16) from Debian 7
+How do you boot your hosts? Network PXE
+Does the default install kernel recognize all your hardware? Till now no issue I faced with hardware detection.
+    However I have not much used fai ISO directly.
+Which drivers are missing? None
 
-Do you manage your configuration space under version control? No​
-What types of scripts are you using for local customization? Shell​
+Do you manage your configuration space under version control? No
+What types of scripts are you using for local customization? Shell
 
 <b>What is the business of your company/organisation?</b> Linux Server consultant. My <a href="http://neeleshgurjar.co.in ">technical blog</a>
 <br><b>Additional comments:</b>
