--- a/features/index.html
+++ b/features/index.html
@@ -29,6 +29,8 @@
 <li> A tool for automated unattended installation. Lazy system administrators like it.
 <li> Remote network installation of different Linux flavors
 <li> Easy-to-use centralized management system for your Linux deployment.
+<li> FAI profiles extend the FAI class concept
+<li> FAI shows a curses based menu for selecting a profile
 <li> It's fast. It only takes a few minutes for a complete installation.
 <li> Scalable. FAI users manage their computer infrastructures starting
  from a few computers up to several thousands of machines.
@@ -46,6 +48,7 @@ only of shell, Perl and Cfengine scripts.
 <li> Besides initial installations, it is used for daily maintenance,
 and can set up chroot environments.
 <li> Cloning machines using disk images is supported
+<li> Also bare-metal provisioning and deploying virtual machines is supported
 <li> Compared to tools like kickstart or cobbler for Red Hat, autoyast for SUSE or
 Jumpstart for SUN Solaris, FAI is much more flexible. You can tune every
 small part of your configuration to your local needs using hooks.
