--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -32,14 +32,14 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.0.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO large  &nbsp; (940 MB) </span>
+<a href="faicd64-large_5.0.1.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO large  &nbsp; (943 MB) </span>
 </a>
 </span>
 &nbsp;
 &nbsp;
 &nbsp;
-The default image. Includes packages for XFCE, GNOME and the basefiles
+The default image. Includes all packages for XFCE and GNOME but only the basefiles
 for CentOS 7 and Ubuntu 14.04
 <p>
 <p> &nbsp;
@@ -47,7 +47,7 @@ for CentOS 7 and Ubuntu 14.04
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.0.iso" style="text-decoration: none">
+<a href="faicd64-small_5.0.1.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO small &nbsp; (567 MB)</span>
 </a>
 </span>
@@ -61,7 +61,21 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.0.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.0.1.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (922 MB)</span>
+</a>
+</span>
+&nbsp;
+&nbsp;
+&nbsp;
+This image only installs Ubuntu 14.04 LTS. All packages are included. 
+<p>
+<p> &nbsp;
+<p>
+
+
+<span class="downloadbox-border" >
+<a href="faicd64-autodiscover_5.0.1.iso" style="text-decoration: none">
 <span class="downloadbox-real" >Autodiscover CD &nbsp; (19 MB) </span>
 </a>
 </span>
@@ -82,7 +96,7 @@ All boot images use FAI 5.0, kernel 3.16, amd64 architecture,
 
 You can write the ISO image onto a USB stick using the command dd(1):
 <div class="featurebox">
-<pre>dd if=faicd64-large_5.0.iso of=/dev/sdX</pre> </div>
+<pre>dd if=faicd64-large_5.0.1.iso of=/dev/sdX</pre> </div>
 and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <HR>
@@ -112,7 +126,7 @@ the installation media.
 
 <hr>
 <ADDRESS>
-Tue, 24 Nov 2015 11:41:19 +0100
+Fri, 11 Dec 2015 11:33:26 +0100
 </ADDRESS>
 
 
