--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.0.iso" style="text-decoration: none">
+<a href="/fai-cd/faicd64-large_5.0.1.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO (940 MB)</span>
 </a>
 </span>
@@ -55,6 +55,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[11 Dez 2015] <b>FAI 5.0.1 is released, new images available</b>
 <li>[24 Nov 2015] <b>FAI 5.0 is released</b>
 <li>[22 Aug 2015] <b>
 Thomas gave a talk about FAI at the <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">Debian
