--- a/reports/index.html
+++ b/reports/index.html
@@ -54,6 +54,8 @@ What types of scripts are you using for local customization? shell, puppet
 <b>What is the business of your company/organisation?</b> Open source company, <a href="http://www.toscom.at/">Toscom</a>
 <br><b>Additional comments:</b>
 We are deploying all kind of linux-servers using fai for many years
+Our PXE menu:
+<a href="pictures/fai_screeny.jpg"><img alt="pxe menu" src="pictures/fai_screeny.jpg" width="20%" border="0" ></a>
 </pre> <HR>
 
 
