--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -57,6 +57,10 @@ How to add Debian Squeeze to your Debian Lenny FAI install server</a> (9/2011)
 -->
 
 
+<li> <a href="http://neeleshgurjar.co.in/techidnyan/bare-metal-provisioning-of-linux-proxmox-using-fai/">Bare Metal Provisioning of Linux (Proxmox) using FAI</a> (2015)
+
+<li> <a href="/doc/tech_fai.pdf">Practical description for FAI 4.2</a> (25 pages, 2014)
+
 <li> <a href="http://www.markus-gattol.name/ws/fai.html">Detailed description</a> (4/2011)
 
 <li> <a href="http://www.shermann.name/search/label/FAI">Blog entries</a> about FAI
