--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,39 @@ Currently we have more than 290 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Lisa Marie Maginnis,  l i s a m  = f sf = o r g
+<br><b>Date:</b> Tue, 22 Dec 2015 00:51:31 -0500
+<pre>
+How many hosts have you installed using fai? <b>50+</b>
+Which version of fai are you using? <b>3.4</b>
+Which version are you using as your install kernel? 4.2
+
+Which types of hosts are you installing with fai? Everything: Workstations, laptops,
+     as well as physical and virtual servers
+
+How do you boot your hosts? PXE, USB Stick, and FAI-CD (for some VMs)
+Does the default install kernel recognize all your hardware? Yes
+Which drivers are missing? None
+
+Do you manage your configuration space under version control? Yes, in git. 
+    Our configs can be found here: https://vcs.fsf.org/?p=fai-configs.git
+
+How big is your config space (Mbytes, # of files)? 836K / 121 files
+How many files do you have in ../config/files? 29
+What types of scripts are you using for local customization? cfengine2
+
+<b>What is the business of your company/organisation?</b> <a href="https://www.fsf.org">Free Software Foundation</a>,  <a href="https://gnu.org">gnu.org</a>
+<br><b>Additional comments:</b>
+FAI-Project is an awesome project, please keep up the great work :)
+
+We started using FAI in 2014 to speed up our deployments and minor upgrades
+(softupdate). Since then, our deployment time has gone down from 1.5hours per
+host to 15mins per host. This saves our organization a lot of SysAdmin time
+and resources, allowing us to be more effective instead of waiting on long
+manual builds.
+</pre> <HR>
+
+
 <b>From:</b> Wolfgang Hotwagner, www.toscom.at
 <br><b>Date:</b> Thu, 10 Dec 2015 17:50:36 +0100
 
